@@ -1,5 +1,5 @@
 !
-! Copyright (C) 2001-2017 Quantum ESPRESSO group
+! Copyright (C) 2001-2018 Quantum ESPRESSO group
 ! This file is distributed under the terms of the
 ! GNU General Public License. See the file `License'
 ! in the root directory of the present distribution,
@@ -17,6 +17,7 @@ SUBROUTINE lr_run_nscf( )
   USE control_flags,   ONLY : conv_ions, twfcollect, restart
   USE basis,           ONLY : starting_wfc, starting_pot, startingconfig
   USE io_files,        ONLY : prefix, tmp_dir, wfc_dir, seqopn
+  USE io_global,       ONLY : stdout
   USE lr_variables,    ONLY : tmp_dir_lr
   USE mp_bands,        ONLY : ntask_groups, intra_bgrp_comm, nyfft
   USE fft_types,       ONLY : fft_type_allocate
@@ -30,6 +31,8 @@ SUBROUTINE lr_run_nscf( )
   LOGICAL :: exst
   !
   CALL start_clock( 'lr_run_nscf' )
+  !
+  WRITE( stdout, '(/,5X,"------------ Nscf calculation ---------------")')
   !   
   CALL clean_pw(.FALSE.)
   !   
